--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
     <head>
         <meta charset="utf-8">
         <link rel="shortcut icon" href="favicon.ico">
+        <style type="text/css">
+        	body {    
+			    margin: 0 !important;
+			    padding: 0 !important;
+			}
+        </style>
     </head>
     <body>
     	<div id="render-target"></div>
