--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
     <head>
         <meta charset="utf-8">
         <link rel="shortcut icon" href="favicon.ico">
+        <link rel="stylesheet" href="https://npmcdn.com/leaflet@1.0.0-rc.2/dist/leaflet.css" />
         <style type="text/css">
         	body {    
 			    margin: 0 !important;
 			    padding: 0 !important;
 			}
+
+            .leaflet-container {
+                height: 100%;
+            }
         </style>
     </head>
     <body>
-    	<div id="render-target"></div>
+    	<div id="container"></div>
         <script type="text/javascript" src="bundle.js" charset="utf-8"></script>
     </body>
 </html>
